--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
   },
   "dependencies": {
     "gatsby": "^2.21.37",
+    "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-react-head": "^1.1.0",
+    "normalize.css": "^8.0.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-head": "^3.3.0"
   },
   "devDependencies": {
     "prettier": "2.0.5"
