--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "pure-react-carousel": "^1.27.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-head": "^3.3.0"
+    "react-head": "^3.3.0",
+    "react-slick": "^0.26.1",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "prettier": "2.0.5"
