--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@bumaga/tabs": "^0.2.0",
     "gatsby": "^2.21.37",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-react-head": "^1.1.0",
