--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@bumaga/tabs": "^0.2.0",
+    "framer-motion": "^1.11.0",
     "gatsby": "^2.21.37",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-react-head": "^1.1.0",
@@ -23,6 +24,7 @@
     "react-dom": "^16.12.0",
     "react-head": "^3.3.0",
     "react-slick": "^0.26.1",
+    "react-tabs": "^3.1.1",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
