--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "framer-motion": "^1.11.0",
     "gatsby": "^2.21.37",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-netlify-cms": "^4.3.5",
     "gatsby-plugin-react-head": "^1.1.0",
+    "netlify-cms-app": "^2.12.14",
     "normalize.css": "^8.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
